src/scripting/snapshots/ssg__scripting__parser__tests__parse_blocks.snap
---
source: src/scripting/parser.rs
expression: ast
---
[
    Block {
        name: ByteOffsetSnapshot {
            end: 14,
            start: 10,
            content: "name",
        },
        offset: ByteOffsetSnapshot {
            end: 51,
            start: 0,
            content: "{{ block \"name\" }}\n<span>html here</span>\n{{ end }}",
        },
        content: "{{ block \"name\" }}\n<span>html here</span>\n{{ end }}",
        body: [
            Html {
                offset: ByteOffsetSnapshot {
                    end: 42,
                    start: 18,
                    content: "\n<span>html here</span>\n",
                },
                content: "\n<span>html here</span>\n",
            },
        ],
    },
    Html {
        offset: ByteOffsetSnapshot {
            end: 52,
            start: 51,
            content: "\n",
        },
        content: "\n",
    },
    Block {
        name: ByteOffsetSnapshot {
            end: 66,
            start: 62,
            content: "name",
        },
        offset: ByteOffsetSnapshot {
            end: 54,
            start: 0,
            content: "{{ block \"name\" }}\n<span>html here</span>\n{{ end }}\n{{",
        },
        content: "{{ block \"name\" }}\n<span>html here</span>\n{{ end }}\n{{",
        body: [],
    },
]
