src/scripting/snapshots/ssg__scripting__parser__tests__parse_for_loop.snap
---
source: src/scripting/parser.rs
expression: ast
---
[
    ForLoop {
        identifier: ByteOffsetSnapshot {
            end: 10,
            start: 7,
            content: "tag",
        },
        index: Some(
            ByteOffsetSnapshot {
                end: 15,
                start: 12,
                content: "idx",
            },
        ),
        list: MemberAccess {
            offset: ByteOffsetSnapshot {
                end: 28,
                start: 19,
                content: "page.tags",
            },
            content: "page.tags",
            property: ByteOffsetSnapshot {
                end: 28,
                start: 24,
                content: "tags",
            },
            object: Identifier {
                offset: ByteOffsetSnapshot {
                    end: 23,
                    start: 19,
                    content: "page",
                },
                content: "page",
            },
        },
        offset: ByteOffsetSnapshot {
            end: 155,
            start: 0,
            content: "{{ for tag, idx in page.tags }}\n<div>\n  <span>Hello World!</span>\n</div>\n{{ render \"button.html\" end }}\n<div>\n  <span>Hello Another</span>\n</div>\n{{ end }}",
        },
        content: "{{ for tag, idx in page.tags }}\n<div>\n  <span>Hello World!</span>\n</div>\n{{ render \"button.html\" end }}\n<div>\n  <span>Hello Another</span>\n</div>\n{{ end }}",
        body: [
            Html {
                offset: ByteOffsetSnapshot {
                    end: 73,
                    start: 31,
                    content: "\n<div>\n  <span>Hello World!</span>\n</div>\n",
                },
                content: "\n<div>\n  <span>Hello World!</span>\n</div>\n",
            },
            Render {
                component: ByteOffsetSnapshot {
                    end: 95,
                    start: 84,
                    content: "button.html",
                },
                offset: ByteOffsetSnapshot {
                    end: 103,
                    start: 73,
                    content: "{{ render \"button.html\" end }}",
                },
                content: "{{ render \"button.html\" end }}",
                body: [],
            },
            Html {
                offset: ByteOffsetSnapshot {
                    end: 146,
                    start: 103,
                    content: "\n<div>\n  <span>Hello Another</span>\n</div>\n",
                },
                content: "\n<div>\n  <span>Hello Another</span>\n</div>\n",
            },
        ],
    },
]
