src/scripting/snapshots/ssg__scripting__parser__tests__parse_for_without_idx.snap
---
source: src/scripting/parser.rs
expression: ast
---
[
    ForLoop {
        identifier: ByteOffsetSnapshot {
            end: 10,
            start: 7,
            content: "tag",
        },
        index: None,
        list: MemberAccess {
            offset: ByteOffsetSnapshot {
                end: 23,
                start: 14,
                content: "page.tags",
            },
            content: "page.tags",
            property: ByteOffsetSnapshot {
                end: 23,
                start: 19,
                content: "tags",
            },
            object: Identifier {
                offset: ByteOffsetSnapshot {
                    end: 18,
                    start: 14,
                    content: "page",
                },
                content: "page",
            },
        },
        offset: ByteOffsetSnapshot {
            end: 150,
            start: 0,
            content: "{{ for tag in page.tags }}\n<div>\n  <span>Hello World!</span>\n</div>\n{{ render \"button.html\" end }}\n<div>\n  <span>Hello Another</span>\n</div>\n{{ end }}",
        },
        content: "{{ for tag in page.tags }}\n<div>\n  <span>Hello World!</span>\n</div>\n{{ render \"button.html\" end }}\n<div>\n  <span>Hello Another</span>\n</div>\n{{ end }}",
        body: [
            Html {
                offset: ByteOffsetSnapshot {
                    end: 68,
                    start: 26,
                    content: "\n<div>\n  <span>Hello World!</span>\n</div>\n",
                },
                content: "\n<div>\n  <span>Hello World!</span>\n</div>\n",
            },
            Render {
                component: ByteOffsetSnapshot {
                    end: 90,
                    start: 79,
                    content: "button.html",
                },
                offset: ByteOffsetSnapshot {
                    end: 90,
                    start: 79,
                    content: "button.html",
                },
                content: "button.html",
                body: [],
            },
            Html {
                offset: ByteOffsetSnapshot {
                    end: 141,
                    start: 98,
                    content: "\n<div>\n  <span>Hello Another</span>\n</div>\n",
                },
                content: "\n<div>\n  <span>Hello Another</span>\n</div>\n",
            },
        ],
    },
]
