src/scripting/snapshots/ssg__scripting__parser__tests__parse_render_blocks.snap
---
source: src/scripting/parser.rs
expression: ast
---
[
    Render {
        component: ByteOffsetSnapshot {
            end: 16,
            start: 11,
            content: "other",
        },
        offset: ByteOffsetSnapshot {
            end: 16,
            start: 11,
            content: "other",
        },
        content: "other",
        body: [],
    },
    Html {
        offset: ByteOffsetSnapshot {
            end: 25,
            start: 24,
            content: "\n",
        },
        content: "\n",
    },
    Render {
        component: ByteOffsetSnapshot {
            end: 40,
            start: 36,
            content: "name",
        },
        offset: ByteOffsetSnapshot {
            end: 77,
            start: 36,
            content: "name\" }}\n<span>html here</span>\n{{ end }}",
        },
        content: "name\" }}\n<span>html here</span>\n{{ end }}",
        body: [
            Html {
                offset: ByteOffsetSnapshot {
                    end: 68,
                    start: 44,
                    content: "\n<span>html here</span>\n",
                },
                content: "\n<span>html here</span>\n",
            },
        ],
    },
]
