src/scripting/snapshots/ssg__scripting__parser__tests__parse_var_expr.snap
---
source: src/scripting/parser.rs
expression: ast
---
[
    Variable {
        ident: ByteOffset {
            start: 3,
            end: 11,
        },
        value: BinaryOp {
            left: BinaryOp {
                left: IntLiteral {
                    offset: ByteOffset {
                        start: 16,
                        end: 19,
                    },
                    content: "100",
                },
                right: IntLiteral {
                    offset: ByteOffset {
                        start: 22,
                        end: 25,
                    },
                    content: "300",
                },
                offset: ByteOffset {
                    start: 16,
                    end: 25,
                },
                content: "100 + 300",
                operator: Plus,
            },
            right: IntLiteral {
                offset: ByteOffset {
                    start: 29,
                    end: 32,
                },
                content: "200",
            },
            offset: ByteOffset {
                start: 16,
                end: 32,
            },
            content: "100 + 300) * 200",
            operator: Mul,
        },
        content: "var_name := (100 + 300) * 200",
    },
]
